--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -1,4 +1,3 @@
-/* In your styles */
 .custom-modal-backdrop {
   position: fixed;
   top: 0;
@@ -6,22 +5,20 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 999999;
   display: flex;
   justify-content: center;
   align-items: center;
+  pointer-events: auto;
+  z-index: 9999;
 }
 
 .custom-modal {
   background: var(--white-100);
   border-radius: 12px;
   padding: 25px;
-  width: fit-content;
-  max-width: 700px;
-  position: relative;
+  width: 75%;
+  max-width: 900px;
   animation: fade-in 0.2s ease forwards;
-  z-index: 99999999;
-  position: relative;
 }
 
 .modal-small {
@@ -40,13 +37,19 @@
   max-width: 800px;
 }
 
+.xxl-modal {
+  width: 75%;
+  max-width: 75%;
+  height: auto;
+}
+
 .fullscreen-modal {
   width: 100vw;
   height: 100vh;
   border-radius: 0;
 }
 
-.modal-scrollable{
+.modal-scrollable {
   max-height: 500px;
   overflow-y: auto;
 }
