--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -5376,7 +5376,7 @@ input.alertInput {
 
 /* ? Upload Image Modal */
 
-.uploadFile .modal-dialog {
+.uploadFile {
   max-width: 550px;
   width: 550px;
 }
