--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -255,6 +255,9 @@ li {
   color: var(--green-color);
 }
 
+a{
+  text-decoration: none;
+}
 
 /* todo =================== COMMON-CLASS ===================== */
 
