--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -257,6 +257,13 @@ li {
 
 a{
   text-decoration: none;
+  color: var(--green-color);
+}
+
+.hide {
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
 /* todo =================== COMMON-CLASS ===================== */
